fixed overlap issue with navbar

--- a/styles.css
+++ b/styles.css
@@ -10,147 +10,152 @@ body {
     color: black !important;
 }
 
+.row {
+    scroll-margin-top: 34px; /* seems to be about right w/ added margin already*/
+}
   
+
+
 
 /*------------------------------------
 - COLOR purple
 ------------------------------------*/
 .alert-purple {
-    color: #564477;
-    background-color: #101101100;
-    border-color: #f6f4f9;
+    color: #705da5;
+    background-color: #12912f119;
+    border-color: #11d122112;
 }
 
 .alert-purple hr {
-    border-top-color: #e8e4ef;
+    border-top-color: #10f111109;
 }
 
 .alert-purple .alert-link {
-    color: #3e3156;
+    color: #5a4a85;
 }
 
 .badge-purple {
     color: #212529;
-    background-color: #9380B6;
+    background-color: #B6ACD1;
 }
 
 .badge-purple[href]:hover, .badge-purple[href]:focus {
     color: #212529;
-    background-color: #775fa3;
+    background-color: #998bbe;
 }
 
 .bg-purple {
-    background-color: #9380B6 !important;
+    background-color: #B6ACD1 !important;
 }
 
 a.bg-purple:hover, a.bg-purple:focus,
 button.bg-purple:hover,
 button.bg-purple:focus {
-    background-color: #775fa3 !important;
+    background-color: #998bbe !important;
 }
 
 .border-purple {
-    border-color: #9380B6 !important;
+    border-color: #B6ACD1 !important;
 }
 
 .btn-purple {
     color: #212529;
-    background-color: #9380B6;
-    border-color: #9380B6;
+    background-color: #B6ACD1;
+    border-color: #B6ACD1;
 }
 
 .btn-purple:hover {
     color: #212529;
-    background-color: #7f69a8;
-    border-color: #775fa3;
+    background-color: #a195c4;
+    border-color: #998bbe;
 }
 
 .btn-purple:focus, .btn-purple.focus {
-    box-shadow: 0 0 0 0.2rem rgba(147, 128, 182, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(182, 172, 209, 0.5);
 }
 
 .btn-purple.disabled, .btn-purple:disabled {
     color: #212529;
-    background-color: #9380B6;
-    border-color: #9380B6;
+    background-color: #B6ACD1;
+    border-color: #B6ACD1;
 }
 
 .btn-purple:not(:disabled):not(.disabled):active, .btn-purple:not(:disabled):not(.disabled).active, .show > .btn-purple.dropdown-toggle {
     color: #212529;
-    background-color: #775fa3;
-    border-color: #70589a;
+    background-color: #998bbe;
+    border-color: #9081b9;
 }
 
 .btn-purple:not(:disabled):not(.disabled):active:focus, .btn-purple:not(:disabled):not(.disabled).active:focus, .show > .btn-purple.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(147, 128, 182, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(182, 172, 209, 0.5);
 }
 
 .btn-outline-purple {
-    color: #9380B6;
+    color: #B6ACD1;
     background-color: transparent;
-    border-color: #9380B6;
+    border-color: #B6ACD1;
 }
 
 .btn-outline-purple:hover {
     color: #212529;
-    background-color: #9380B6;
-    border-color: #9380B6;
+    background-color: #B6ACD1;
+    border-color: #B6ACD1;
 }
 
 .btn-outline-purple:focus, .btn-outline-purple.focus {
-    box-shadow: 0 0 0 0.2rem rgba(147, 128, 182, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(182, 172, 209, 0.5);
 }
 
 .btn-outline-purple.disabled, .btn-outline-purple:disabled {
-    color: #9380B6;
+    color: #B6ACD1;
     background-color: transparent;
 }
 
 .btn-outline-purple:not(:disabled):not(.disabled):active, .btn-outline-purple:not(:disabled):not(.disabled).active, .show > .btn-outline-purple.dropdown-toggle {
     color: #212529;
-    background-color: #9380B6;
-    border-color: #9380B6;
+    background-color: #B6ACD1;
+    border-color: #B6ACD1;
 }
 
 .btn-outline-purple:not(:disabled):not(.disabled):active:focus, .btn-outline-purple:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-purple.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(147, 128, 182, 0.5);
+    box-shadow: 0 0 0 0.2rem rgba(182, 172, 209, 0.5);
 }
 
 .list-group-item-purple {
-    color: #564477;
-    background-color: #f6f4f9;
+    color: #705da5;
+    background-color: #11d122112;
 }
 
 .list-group-item-purple.list-group-item-action:hover, .list-group-item-purple.list-group-item-action:focus {
-    color: #564477;
-    background-color: #e8e4ef;
+    color: #705da5;
+    background-color: #10f111109;
 }
 
 .list-group-item-purple.list-group-item-action.active {
     color: #212529;
-    background-color: #564477;
-    border-color: #564477;
+    background-color: #705da5;
+    border-color: #705da5;
 }
 
 .table-purple,
 .table-purple > th,
 .table-purple > td {
-    background-color: #f6f4f9;
+    background-color: #11d122112;
 }
 
 .table-hover .table-purple:hover {
-    background-color: #e8e4ef;
+    background-color: #10f111109;
 }
 
 .table-hover .table-purple:hover > td,
 .table-hover .table-purple:hover > th {
-    background-color: #e8e4ef;
+    background-color: #10f111109;
 }
 
 .text-purple {
-    color: #9380B6 !important;
+    color: #B6ACD1 !important;
 }
 
 a.text-purple:hover, a.text-purple:focus {
-    color: #775fa3 !important;
+    color: #998bbe !important;
 }
